--- a/hello/CMakeLists.txt
+++ b/hello/CMakeLists.txt
@@ -5,10 +5,13 @@ SET_TARGET_PROPERTIES(
     PROPERTIES
         SOVERSION ${${PROJECT_NAME}_SOVERSION}
         VERSION ${${PROJECT_NAME}_VERSION})
-INSTALL(TARGETS hellolib LIBRARY DESTINATION)
+INSTALL(TARGETS hellolib LIBRARY DESTINATION lib)
+INSTALL(FILES include/hello/hello.h DESTINATION include)
+
 
 SET(HELLO_NEEDED_LIBS hellolib)
 
 ADD_EXECUTABLE(hello app/hello.cpp)
 TARGET_LINK_LIBRARIES(hello ${HELLO_NEEDED_LIBS})
-# INSTALL(TARGETS hello DESTINATION bin)
+INSTALL(TARGETS hello DESTINATION bin)
+
